[package]
name = "signit"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
base64 = "0.9"
thrussh-keys = "0.11"
dirs = "1.0"
structopt = "0.2"
serde_json = "1.0"
reqwest = "0.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]
